030-software/fluxcd/apps/shell2http/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shell2http
  annotations:
    configmap.reloader.stakater.com/reload: scripts
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: shell2http
  template:
    metadata:
      labels:
        app: shell2http
        policy.gatekeeper.sh/ignore-psp-pods-allowed-user-ranges: "true"
        policy.gatekeeper.sh/ignore-psp-readonlyrootfilesystem: "true"
    spec:
      serviceAccountName: shell2http
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: shell2http
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: shell2http
      containers:
        - name: shell2http
          image: msoap/shell2http:1.17.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - -export-all-vars
            - '-500'
            - -form

            - /vpn-egress-gateway/restart
            - /bin/restart-vpn-egress-gateway.sh

            - /vpn-egress-gateway/dl-rate
            - /bin/get-vpn-egress-gateway-average-download-rate.sh

            - /trackers
            - /bin/get-trackers.sh

            - /trackers/add
            - /bin/add-trackers.sh
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "apk add --no-cache kubectl jq curl"]
          volumeMounts:
            - name: scripts
              mountPath: /bin/restart-vpn-egress-gateway.sh
              subPath: restart-vpn-egress-gateway.sh
            - name: scripts
              mountPath: /bin/get-trackers.sh
              subPath: get-trackers.sh
            - name: scripts
              mountPath: /bin/add-trackers.sh
              subPath: add-trackers.sh
            - name: scripts
              mountPath: /bin/get-vpn-egress-gateway-average-download-rate.sh
              subPath: get-vpn-egress-gateway-average-download-rate.sh
      volumes:
        - name: scripts
          configMap:
            defaultMode: 365
            name: scripts
