030-software/fluxcd/apps/shell2http/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shell2http
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: shell2http
