030-software/fluxcd/apps/shell2http/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shell2http
  annotations:
    dashboard.${domain}/name: shell2http
    dashboard.${domain}/url: https://shell2http.${domain}
    dashboard.${domain}/icon: wrench
spec:
  hostnames:
  - shell2http.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: shell2http
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
